app/assets/stylesheets/components/_cards.scss
.card-movie{
  display: flex;
  height: 280px;
  background-color: white;
  border-radius: $border-radius;
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
  margin-bottom: 24px;

  .infos{
    padding-left: 16px;
  }
  .title{
    font-size: 1.75rem;
    font-weight: 500;
    line-height: 2rem;
  }

  .poster{
    border-radius: 5px 0 0 5px;
  }
}


.movies_card {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 1em;
}

.card-text.text-ellipsis--3{
  text-overflow:ellipsis;
  overflow:hidden;
  // Addition lines for 2 line or multiline ellipsis
  display: -webkit-box !important;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  white-space: normal;
}


/* Bookings Card */
.card_booking {
  background-color: #404040;
  border-radius: $border-radius;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 0.5em 50px -20px, rgba(0, 0, 0, 0.3) 0px 10px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
  display: flex;
  height: 40vh;
  justify-content: space-between;
  margin: 1.5em 0;

  img {
    border-radius: $border-radius;
    object-fit: contain;
    height: 40vh;
  }

  .text {
    display: flex;
    justify-content: space-between;
    width: 100%;
  }

  .info, .options {
    padding: 0 1em;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    font-size: 1em;

    i {
      font-size: 1.5em;
    }
  }

  .info {
    p {
      margin: 0;
    }
  }

  .delete-btn {
    filter: opacity(0.5);
    margin-top: 20vh;
    padding: 0 1em;
  }
}

.card_booking:hover {
  .delete-btn {
    filter: none;
  }
}

/* Follows card */

.followers_card {
  display: flex;
  justify-content: space-between;
  background-color: #404040;
  border-radius: $border-radius;
  padding: 1em;
  margin-bottom: 2em;

  .follower_details {
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    .username {
      font-size: 1.3em;
    }

    .followed_at {
      color:lightgrey;
      font-size: 0.7em;
      margin-bottom: 0;
    }
  }

  .options {
    display: flex;
    justify-content: space-between;
    align-items: baseline;


    button {
      margin: 0 0.5em;
    }
  }
}

.followed_cards_container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.card_followeds {
  background: darkgrey;
  border-radius: $border-radius;
  margin: 0.5em;
  padding: 0.5em 0.5em;
  text-align: center;
  width: 16vw;

  .username {
    font-size: 1.3em;
  }
}

